manifests/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  namespace: api
  labels:
    app: api
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
