manifests/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: client
spec:
  containers:
    - name: curl
      image: curlimages/curl
      command: ["sleep", "3600"]
